@@ -21,9 +21,10 @@
 			<tab id="tabRuntimeStatistics" label="Statistics"
 				selected="true" />
 			<tab id="tabRuntimeCommands" label="Commands"
-				visible="@{runtime.admin}" />
+				visible="@{runtime.adminOrNoUser}" />
 			<tab id="tabRuntimeCache" label="Cache" />
 			<tab id="tabRuntimeIndex" label="Index" />
+			<tab id="tabRuntimeTerms" label="Terms" />
 		</tabs>
 		<tabpanels>
 			<tabpanel>
@@ -37,6 +38,9 @@
 			</tabpanel>
 			<tabpanel fulfill="tabRuntimeIndex.onSelect">
 				<include src="WEB-INF/zul/runtime/indices.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabRuntimeTerms.onSelect">
+				<include src="WEB-INF/zul/runtime/terms.zul" />
 			</tabpanel>
 		</tabpanels>
 	</tabbox>
