@@ -1,0 +1,48 @@
+<!--
+	License Agreement for Jaeksoft OpenSearchServer
+	Copyright (C) 2010 Emmanuel Keller / Jaeksoft
+	http://www.open-search-server.com
+	This file is part of Jaeksoft OpenSearchServer.
+	Jaeksoft OpenSearchServer is free software: you can
+	redistribute it and/or modify it under the terms of the GNU General
+	Public License as published by the Free Software Foundation, either
+	version 3 of the License, or (at your option) any later version.
+	Jaeksoft OpenSearchServer is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+	General Public License for more details. You should have received a
+	copy of the GNU General Public License along with Jaeksoft OpenSearchServer.
+	If not, see <http://www.gnu.org/licenses/>.
+-->
+<window id="terms"
+	use="com.jaeksoft.searchlib.web.controller.runtime.TermController">
+	<grid model="@{terms.termList}">
+		<auxhead>
+			<auxheader colspan="3">
+				<listbox mold="select" model="@{terms.fieldList}"
+					selectedItem="@{terms.currentField}" forward="onSelect=onSearch" />
+				<label value="Search Term" />
+				<textbox value="@{terms.searchTerm}" />
+				<button label="Search" forward="onSearch" />
+				<space width="20px" />
+				<button label="Reset" forward="onReset" />
+				<space width="50px" />
+				<button label="Next" forward="onNext" />
+				<space width="50px" />
+				<button label="Export..." forward="onExport" />
+			</auxheader>
+		</auxhead>
+		<columns>
+			<column label="term" />
+			<column width="100px" label="field" />
+			<column width="100px" label="frequency" />
+		</columns>
+		<rows>
+			<row self="@{each=term}">
+				<label value="@{term.term}" />
+				<label value="@{term.field}" />
+				<label value="@{term.freq}" />
+			</row>
+		</rows>
+	</grid>
+</window>
