@@ -40,6 +40,7 @@ import javax.xml.xpath.XPathExpressionException;
 import org.apache.http.HttpException;
 import org.apache.lucene.index.CorruptIndexException;
 import org.apache.lucene.index.Term;
+import org.apache.lucene.index.TermEnum;
 import org.apache.lucene.index.TermFreqVector;
 import org.apache.lucene.queryParser.ParseException;
 import org.apache.lucene.store.LockObtainFailedException;
@@ -392,6 +393,21 @@ public class IndexGroup extends IndexAbstract {
 	protected void writeXmlConfigIndex(XmlWriter xmlWriter) throws SAXException {
 		for (IndexSingle index : getIndices())
 			index.writeXmlConfig(xmlWriter);
+	}
+
+	@Override
+	public TermEnum getTermEnum() throws IOException {
+		throw new RuntimeException("Not yet implemented");
+	}
+
+	@Override
+	public Collection<?> getFieldNames() {
+		throw new RuntimeException("Not yet implemented");
+	}
+
+	@Override
+	public TermEnum getTermEnum(String field, String term) throws IOException {
+		throw new RuntimeException("Not yet implemented");
 	}
 
 }
