@@ -35,6 +35,7 @@ import java.util.Collection;
 import org.apache.http.HttpException;
 import org.apache.lucene.index.CorruptIndexException;
 import org.apache.lucene.index.Term;
+import org.apache.lucene.index.TermEnum;
 import org.apache.lucene.index.TermFreqVector;
 import org.apache.lucene.queryParser.ParseException;
 import org.apache.lucene.store.LockObtainFailedException;
@@ -463,6 +464,34 @@ public class IndexSingle extends IndexAbstract {
 		}
 	}
 
+	@Override
+	public TermEnum getTermEnum() throws IOException {
+		if (!online)
+			throw new IOException("Index is offline");
+		r.lock();
+		try {
+			if (reader != null)
+				return reader.getTermEnum();
+			return null;
+		} finally {
+			r.unlock();
+		}
+	}
+
+	@Override
+	public TermEnum getTermEnum(String field, String term) throws IOException {
+		if (!online)
+			throw new IOException("Index is offline");
+		r.lock();
+		try {
+			if (reader != null)
+				return reader.getTermEnum(field, term);
+			return null;
+		} finally {
+			r.unlock();
+		}
+	}
+
 	public TermFreqVector getTermFreqVector(int docId, String field)
 			throws IOException {
 		if (!online)
@@ -594,6 +623,20 @@ public class IndexSingle extends IndexAbstract {
 	@Override
 	protected void writeXmlConfigIndex(XmlWriter xmlWriter) throws SAXException {
 		indexConfig.writeXmlConfig(xmlWriter);
+	}
+
+	@Override
+	public Collection<?> getFieldNames() throws IOException {
+		if (!online)
+			throw new IOException("Index is offline");
+		r.lock();
+		try {
+			if (reader != null)
+				return reader.getFieldNames();
+			return null;
+		} finally {
+			r.unlock();
+		}
 	}
 
 }
