@@ -33,6 +33,7 @@ import java.util.Collection;
 import org.apache.lucene.index.CorruptIndexException;
 import org.apache.lucene.index.StaleReaderException;
 import org.apache.lucene.index.Term;
+import org.apache.lucene.index.TermEnum;
 import org.apache.lucene.index.TermFreqVector;
 import org.apache.lucene.queryParser.ParseException;
 import org.apache.lucene.store.LockObtainFailedException;
@@ -142,6 +143,24 @@ public class ReaderNativeOSSE extends ReaderAbstract {
 			URISyntaxException {
 		// TODO Auto-generated method stub
 
+	}
+
+	@Override
+	public TermEnum getTermEnum() throws IOException {
+		// TODO Auto-generated method stub
+		return null;
+	}
+
+	@Override
+	public TermEnum getTermEnum(String field, String term) throws IOException {
+		// TODO Auto-generated method stub
+		return null;
+	}
+
+	@Override
+	public Collection<?> getFieldNames() {
+		// TODO Auto-generated method stub
+		return null;
 	}
 
 }
